--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1>Battleships</h1>
-  <div class="prompt">Prompt!!!</div>
+  <div class="prompt"></div>
   <div class="container">
 
     <div class="gameboard">
